# libfsrc

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  TODO  config.h.in  mkconf
cmake/Modules/: FindFFTW.cmake
fsrctool/: CMakeLists.txt  main.c  wave.c  wave.h
htdocs/: index.htm
libfsrc/: CMakeLists.txt  alloc.c  bits.c  bits.h  cache.c  converter.c  design.c  design.h  enum_factors.c  enum_factors.h  factors.c  factors.h  fft.c  fft.h  fft_decl.h  fftwx_impl.h  file_ioi.c  fir_irls.c  fir_irls.h  fir_minphase.c  formats.c  formats.h  formats_impl.h  formats_inst.h  fsrc.c  fsrc.h  ifsrc.h  isort.h  lpf_design.c  lpf_design.h  nearest.c  nearest.h  ols_src.c  ols_src_impl.h  pps_src.c  pps_src_impl.h  qfactors.c  qfactors.h  qpermute.c  qpermute.h  (+10 more)
